# fortran_inlining

./: .gitignore  CMakeLists.txt  README.md  functions.f90  icon-beautify  initialization.f90
cmake/: openacc_helper.cmake
